@@ -19,6 +19,7 @@ static PyObject* get_process_num_threads(PyObject* self, PyObject* args);
 static PyObject* get_process_status(PyObject* self, PyObject* args);
 static PyObject* get_process_threads(PyObject* self, PyObject* args);
 static PyObject* get_process_open_files(PyObject* self, PyObject* args);
+static PyObject* get_process_connections(PyObject* self, PyObject* args);
 
 // --- system-related functions
 static PyObject* get_pid_list(PyObject* self, PyObject* args);
